Explicacion de cajas divs posicion color tamano id class

--- a/clase_5/index.html
+++ b/clase_5/index.html
@@ -3,11 +3,28 @@
   <head>
     <meta charset="UTF-8">
     <title>Videojuego</title>
+    <link rel="stylesheet" href="./assets/index.css">
   </head>
   <body>
     <div id="app">
-      <h1>hola videojuego</h1>
-      <img src="./background-1.jpg">
+      <div id="caja1" class="color"></div>
+      <div id="caja2"></div>
+      <div id="caja3" class="color"></div>
+      <div id="caja4"></div>
+      <!-- <header>
+        <h1>hola videojuego</h1>
+      </header>
+      <aside>
+        <h3>Opciones</h3>
+      </aside>
+      <content>
+        <img src="./assets/img/background-1.jpg" width="400" height="200">
+      </content>
+      <aside></aside>
+      <footer>
+        <h5>footer</h5>
+      </footer> -->
     </div>
+    <script type="text/javascript" src="./js/index.js"></script>
   </body>
 </html>
