--- a/clase_5/index.html
+++ b/clase_5/index.html
@@ -1,30 +1,18 @@
 <!DOCTYPE html>
-<html lang="es">
-  <head>
+<html lang="en">
+
+<head>
     <meta charset="UTF-8">
-    <title>Videojuego</title>
-    <link rel="stylesheet" href="./assets/index.css">
-  </head>
-  <body>
-    <div id="app">
-      <div id="caja1" class="color"></div>
-      <div id="caja2"></div>
-      <div id="caja3" class="color"></div>
-      <div id="caja4"></div>
-      <!-- <header>
-        <h1>hola videojuego</h1>
-      </header>
-      <aside>
-        <h3>Opciones</h3>
-      </aside>
-      <content>
-        <img src="./assets/img/background-1.jpg" width="400" height="200">
-      </content>
-      <aside></aside>
-      <footer>
-        <h5>footer</h5>
-      </footer> -->
-    </div>
-    <script type="text/javascript" src="./js/index.js"></script>
-  </body>
+    <title>Star Battle</title>
+</head>
+
+<body>
+  <div id="app">
+    <canvas id="canvasGame" width="500" height="500"></canvas>
+  </div>
+  <footer>
+
+  </footer>
+  <script type="text/javascript" src="index.js"></script>
+</body>
 </html>
