--- a/clase_5/index.html
+++ b/clase_5/index.html
@@ -9,6 +9,10 @@
 <body>
   <div id="app">
     <canvas id="canvasGame" width="500" height="500"></canvas>
+    <button >Up</button>
+    <button>left</button>
+    <button>rigth</button>
+    <button>down</button>
   </div>
   <footer>
 
