--- a/clase_5/index.html
+++ b/clase_5/index.html
@@ -4,15 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Star Battle</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
   <div id="app">
     <canvas id="canvasGame" width="500" height="500"></canvas>
-    <button >Up</button>
-    <button>left</button>
-    <button>rigth</button>
-    <button>down</button>
+    <button id="up" onclick="clickUp()">Up</button>
+    <button id="lft">left</button>
+    <button id="rgh">rigth</button>
+    <button id="dwn" onclick="clickDwn()">down</button>
   </div>
   <footer>
 
